--- a/style.css
+++ b/style.css
@@ -1,4 +1,342 @@
-body{
-    color:aliceblue;
-    background-color: beige;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:Arial, Helvetica, sans-serif;
+    opacity: 1;
+
 }
+.header{
+    background-color: white;
+    box-shadow: 0 0 2px grey;
+    position: sticky;
+    top:0%;
+   
+}
+.calender-popup{
+    border: solid 1px black;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    z-index: 100;
+    border-radius:10px;
+    height: 600px;
+    /* margin-top: -200px; */
+    width: 600px;
+    /* margin-left: -300px; */
+    display: none;
+  
+    /* position:sticky;
+     width:600px;
+     height: 700px;
+     margin-top: 300px;
+     margin-left:700px;
+     border: 1px solid black;
+   
+     background-color: rgb(25, 136, 226);
+     border-radius: 20px;
+     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+     
+ }
+ .hid-calender{
+    display: block;
+
+ }
+ .model{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    bottom:0%;
+    background-color:rgba(0,0,0,0.7);
+    display: none;
+    
+ }
+ .hid-model{
+    display: block;
+    cursor: pointer;
+ }
+ .bg-model{
+    font-size:20px;
+    position:fixed;
+    /* display:flex; */
+    justify-content: space-around;
+    height: 50%;
+    width: 25%;
+    background-color: hsl(182, 84%, 39%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 0 0 20px grey;
+    border-radius: 10px;
+    color:white;
+ }
+ .cross{
+   padding-left: 1.5%;
+    height: 22px;
+    width: 30px;
+    cursor:pointer;
+    
+ }
+ .cross:hover{
+    
+    transform: scale(1.09);
+    transition: 0.7s;
+    background-color: grey;
+    opacity: 0.7;
+    border-radius:10%;
+    box-shadow: 0 0 10px grey;;
+    
+ }
+ .button{
+background-color: rgb(15, 129, 161);
+color: white;
+width: 100px;
+height: 30px;
+border-radius: 20px;
+cursor: pointer;
+}
+.button:hover{
+    transform: scale(1.09);
+    transition: 0.7s;
+    background-color:red;
+}
+ .paraphrases{
+    font-style: italic;
+    font-size: 15px;;
+ }
+ .face{
+    display: flex;
+    justify-content: space-between;
+ }
+.face i{
+    
+   font-size: 50px;
+    margin-left: 200px;
+    
+}
+#address{
+    height: 50px;
+    width: 300px;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.navbar img{
+    width: 100px;
+}
+.country_select{
+    width: 250px;
+    margin-left: 70px;
+    
+
+}
+.select i{
+    font-size:15px;
+    transition: 0.7s;
+}
+.select{
+    width: 100%;
+    padding: 10px 5px;
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid black;
+}
+.options{
+    display: flex;
+    padding: 10px;
+    width: 250px;
+    cursor: pointer;
+}
+.options:hover{
+background-color: aliceblue;
+}
+.options p{
+    margin-left: 40px;
+    color: lightslategray;
+
+}
+.options i{
+    color:dimgrey
+}
+.option_box{
+    box-shadow: 0 0 10px grey;
+    display: none;
+    background-color: aliceblue;
+    position: absolute;
+}
+.hidden{
+    display:block;
+}
+.rotated{
+    transform: rotate(180deg);
+}
+.search_box{
+   display: flex; 
+   margin-left: 150px;
+   margin-right: 70px;
+}
+.search_box i{
+    background-color:black;
+    color: white;
+    border-color: white;
+    padding: 14px;
+    font-size: 15px;
+    border-radius: 0 5px 6px 0 ;
+    cursor: pointer;
+
+}
+
+.serarchclass{
+    padding: 10px;
+    width: 500px;
+    font-size:15px;
+    border: 2px solid black;
+    border-radius: 0 0 6px;
+
+}
+.message i{
+    padding: 14px;
+    font-size: 30px;
+    border-radius: 0 5px 6px 0 ;
+    cursor: pointer;
+    margin-left: 350px;
+
+}
+.bell i{
+    padding: 14px;
+    font-size: 30px;
+    border-radius: 0 5px 6px 0 ;
+    cursor: pointer;
+}
+.my_img img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    
+}
+ .drop-down{
+    display: none;
+    width: 250px;
+    box-shadow: 0 0 10px grey;
+    padding: 15px;
+    background-color: aliceblue;
+    
+    position: absolute;
+    
+    
+
+
+}
+.hid-logo{
+    display: block;
+}
+.name_img img{
+    width: 50px;
+    height:50px;
+    border-radius: 50%;
+    
+}
+.name_img{
+    display: flex;
+    padding:  0px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
+}
+.name_img p{
+    margin: 15px 10px 10px 10px ;
+}
+
+
+.drop-down  li{
+    display: flex;
+    padding: 10px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.drop-down  li p{
+    padding: 0px 0px 0px 10px;
+}
+
+
+/* /*---------products-------/* */
+.box {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width:800px;
+    /* position: relative; */
+    margin-left: 600px;
+    margin-top: 150px;
+    border: 5px solid black;
+    border-radius: 50px;
+    z-index:-1;
+    cursor: pointer;
+
+}
+
+.box i{
+    font-size: 70px;
+    margin-left:0px;
+}
+.box h1{
+    
+    margin-left: 100px;
+    
+}
+.box:hover{
+    background-color: rgb(15, 129, 161);
+    color: white;
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transition: 0.7s;
+}
+.tooltip{
+    border: 1px solid black;
+    width: 200px;
+    position: absolute;
+    margin-left: 500px;
+    margin-top: 200px;
+    padding: 10px;
+    color: black;
+    z-index:1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    cursor:pointer;
+    display: none;
+  
+
+}
+.box:hover > .tooltip{
+    display: block;
+}
+.tooltip-1{
+    border: 1px solid black;
+    width: 200px;
+    position: absolute;
+    margin-left: 550px;
+    margin-top: 200px;
+    padding: 10px;
+    color: black;
+    z-index:1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    cursor:pointer;
+    display: none;
+    
+  
+}
+.box:hover > .tooltip-1{
+    display: block;
+}
+
