--- a/style.css
+++ b/style.css
@@ -13,37 +13,29 @@
     top:0%;
    
 }
-.calender-popup{
-    border: solid 1px black;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    z-index: 100;
-    border-radius:10px;
-    height: 600px;
-    /* margin-top: -200px; */
-    width: 600px;
-    /* margin-left: -300px; */
+.accepted{
+    position:fixed;
+    height: 100%;
+    width:100%;
+    background-color:rgb(246, 246, 246);
+    top:0%;
+    bottom:0%;
+    z-index:100;
+    transition:5s ease-in-out;
     display: none;
-  
-    /* position:sticky;
-     width:600px;
-     height: 700px;
-     margin-top: 300px;
-     margin-left:700px;
-     border: 1px solid black;
+}
+.accepted img{
+    position:fixed;
+    top:50%;
+    left:50%;
+    width:200px;
+    
+    transform: translate(-50%,-50%);
    
-     background-color: rgb(25, 136, 226);
-     border-radius: 20px;
-     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
-     
- }
- .hid-calender{
+}
+.hid-accepted{
     display: block;
-
- }
+}
  .model{
     position: fixed;
     height: 100%;
@@ -339,4 +331,6 @@ background-color: aliceblue;
 .box:hover > .tooltip-1{
     display: block;
 }
-
+/* .service_list{
+    position: relative;
+} */
